Carry a nested object through OIDC discovery instead of failing on it
Discovery turned each metadata value into a plain JDK type and handled
arrays, booleans, numbers and null - but not objects, so an ObjectNode fell
through to asString() and threw. Keycloak publishes mtls_endpoint_aliases,
which is exactly that, so SSO against a real provider failed at boot while
building the client registration: not the one field, the whole discovery,
because the document is carried through to the registration's provider
metadata as a unit.

The collections are now wrapped rather than copied for a related reason
found while fixing it: JSON null maps to a null value, and List.copyOf /
Map.copyOf reject those, so a document with an explicit null would have
failed the same way for a different reason.

Nothing caught this because every unit test here served a flat document,
and the suite that uses a real Keycloak is container-tagged and so absent
from the fast lane. The regression test now serves a real document's
shape - a nested object, a doubly nested one, an explicit null and a null
inside an array - and fails without the object branch.